name:                source
version:             0.1.0.0
synopsis:            All-natural stream processing
-- description:
homepage:            https://github.com/lpeterse/haskell-source
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
copyright:           (c) 2016 Lars Petersen
category:            Data Streaming
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Source,
                       Data.Source.List,
                       Data.Source.ByteString,
                       Data.Source.Attoparsec
  ghc-options:         -Wall
  build-depends:       base >=4.8 && < 5, bytestring, attoparsec, exceptions
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite DrainDevZero
  hs-source-dirs:      test
  main-is:             DrainDevZero.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5,
                       bytestring < 0.11,
                       source
